vlib/v/checker/tests/sum_type_mutable_cast_err.out
vlib/v/checker/tests/sum_type_mutable_cast_err.vv:15:10: error: cannot use operator `+` with `Abc`
   13 |     mut x := Abc(0)
   14 |     if x is int {
   15 |         _ := x + 5
      |                ^
   16 |     }
   17 |     mut f := Foo{Bar{Abc(0)}}
vlib/v/checker/tests/sum_type_mutable_cast_err.vv:19:14: error: cannot use operator `+` with `Abc`
   17 |     mut f := Foo{Bar{Abc(0)}}
   18 |     if f.b.a is int {
   19 |         _ := f.b.a + 5
      |                    ^
   20 |     }
   21 | }
